tests/baselines/reference/typecheckCommaExpression.errors.txt
==== tests/cases/compiler/typecheckCommaExpression.ts (2 errors) ====
    (a, b)
     ~
!!! typecheckCommaExpression.ts(1,2): error TS2095: Cannot find name 'a'.
        ~
!!! typecheckCommaExpression.ts(1,5): error TS2095: Cannot find name 'b'.